--- a/src/components/RandoEditor/DataEditorWrapper/DataEditorWrapper.module.scss
+++ b/src/components/RandoEditor/DataEditorWrapper/DataEditorWrapper.module.scss
@@ -5,6 +5,8 @@
   flex-direction: column;
   .header {
     margin-top: 16px;
+    padding-bottom: 16px;
+    border-bottom: 1px solid $borderColor;
   }
   .container {
     flex: 1;
