--- a/src/components/app/AppLayout/AppLayout.module.scss
+++ b/src/components/app/AppLayout/AppLayout.module.scss
@@ -1,5 +1,8 @@
 .AppLayout {
   @include defaultFont;
+  &.dark {
+    /*!KEEP*/
+  }
   &,
   & > div {
     // Stylize unclassed wrapper too
@@ -8,19 +11,26 @@
     height: 100vh;
     overflow: hidden;
   }
+  &.rootPage {
+    .AppLayout_Header {
+      @media (min-height: $headerHeightTresholdMinPx) {
+        // border-bottom: none;
+      }
+    }
+  }
   .AppLayout_Header {
     display: flex;
     flex-shrink: 0;
     align-items: stretch;
     justify-content: stretch;
     z-index: 100;
-    transition: all $animationTimeMs;
-
+    // transition: all $animationTimeMs;
   }
   &:global(.page-root) {
     .AppLayout_Header {
+      background: none;
       // TODO: Hide header for start page?
-      margin-top: -60px;
+      // margin-top: -60px;
     }
   }
   .AppLayout_Footer {
@@ -31,7 +41,7 @@
     gap: 8px;
     padding: 4px 16px;
     font-size: 80%;
-    opacity: .8;
+    opacity: 0.8;
     // height: auto;
     // max-height: auto;
   }
