--- a/src/components/app/AppLayout/HeadContent.module.scss
+++ b/src/components/app/AppLayout/HeadContent.module.scss
@@ -11,7 +11,7 @@
   .AppTitle {
     transition: all $transitionTimeMs;
     &:hover {
-      opacity: .8;
+      opacity: 0.8;
     }
   }
   .HeadContent_AppMenu {
