--- a/src/core/assets/scss/variables.scss
+++ b/src/core/assets/scss/variables.scss
@@ -1,12 +1,15 @@
 @use 'sass:math';
 @use 'sass:color';
 
-// See exports in `variables.module.scss`...
+// NOTE: See exports in `variables.module.scss` and `parsedCssVariables.ts`...
 
 // DEMO
 $demoColor: color.change(yellow, $alpha: 0.5);
 
-// Header
+// Adaptive tresholds
+
+$sideMenuTresholdMinPx: 450px;
+$sideMenuTresholdMaxPx: $sideMenuTresholdMinPx - 0.01px;
 
 $headerHeightTresholdMinPx: 450px;
 $headerHeightTresholdMaxPx: $headerHeightTresholdMinPx - 0.01px;
@@ -45,38 +48,12 @@ $bodyBgColor: #f5f5f5;
 
 $borderColor: rgba(27, 31, 59, 0.1);
 
-$themeControlsRadiusPx: 8px;
-
 // Paddings...
 
 $innerPaddingPx: 4px;
 $itemPaddingPx: 8px;
 $containerPaddingPx: 16px;
 $blockPaddingPx: 24px;
-
-// Basic containers backgrounds...
-
-$graphPaperBgLightColor: #fff;
-$graphPaperBgDarkColor: #000;
-
-$graphPlotBgLightColor: #222;
-$graphPlotBgDarkColor: #ddd;
-
-$graphPlotFontLightColor: #333;
-$graphPlotFontDarkColor: #ccc;
-
-// Graph labels...
-
-$graphLabelBgLightColor: #222;
-$graphLabelBgDarkColor: #eee;
-
-// $graphLabelBorderLightColor: transparent; // #222;
-// $graphLabelBorderDarkColor: transparent; // #eee;
-$graphLabelBorderLightColor: color.change($graphLabelBgLightColor, $alpha: 0.85);
-$graphLabelBorderDarkColor: color.change($graphLabelBgDarkColor, $alpha: 0.85);
-
-$graphLabelFontLightColor: #ccc;
-$graphLabelFontDarkColor: #333;
 
 // Input elements
 
