Issue #56: Refactored section menu creation components, added stores `allSectionsStore` -- to provide available dataset' sections list, `currentSectionIdStore` -- to store current section id. Section id is saved to local storage and restored on next app launch/editor page visit. Section menu in the left panel as adaptive: it disappears on narrow screens (has the same treshold, 768px, as the top menu).

--- a/src/pages/RandoPage/RandoPage.scss
+++ b/src/pages/RandoPage/RandoPage.scss
@@ -25,6 +25,11 @@
     background-color: color.change($primaryColor, $alpha: 0.05);
     border-bottom: 1px solid $borderColor;
   }
+  .leftColumn {
+    @media (max-width: $sideMenuTresholdMaxPx) {
+      display: none;
+    }
+  }
   .mainColumn {
     flex: 1;
   }
