--- a/src/components/app/AppLayout/NavContent.module.scss
+++ b/src/components/app/AppLayout/NavContent.module.scss
@@ -4,6 +4,8 @@
       padding: 12px;
       border-radius: 4px;
       text-decoration: none;
+      font-size: 140%;
+      text-align: center;
       &,
       &:visited {
         color: $primaryColor;
