Issue #66: Decreased opacity of background overlay for filter dialog window, to better see the table itself.

--- a/src/components/data/EditableTable/EditableTable.module.scss
+++ b/src/components/data/EditableTable/EditableTable.module.scss
@@ -1,5 +1,8 @@
 .GenericFilterDialogModal {
   /*!KEEP*/
+  :global(.svelteui-Modal-overlay) {
+    opacity: 0.25;
+  }
 }
 .EditableTableModal {
   :global(.svelteui-Modal-title) {
