--- a/src/components/ui/Toasts/Toast.scss
+++ b/src/components/ui/Toasts/Toast.scss
@@ -4,10 +4,14 @@ article.Toast {
   padding: 0.75rem 1.25rem;
   border-radius: 0.2rem;
   display: flex;
-  gap: 0.3em;
+  gap: 16px;
   align-items: center;
   margin: 0 auto 0.5rem auto;
   width: 20rem;
+  > :global(svg) {
+    flex-shrink: 0;
+  }
+  box-shadow: rgba(0, 0, 0, 0.25) 1px 1px 6px;
 }
 .error {
   background-color: $errorColor;
@@ -17,9 +21,6 @@ article.Toast {
 }
 .info {
   background-color: $infoColor;
-}
-.text {
-  margin-left: 1rem;
 }
 button {
   display: flex;
